# academ-ia-worker

./: .gitignore  README.md
.github/workflows/: build.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ollama/: commands.rs  manager.rs  mod.rs
src-tauri/src/state/: commands.rs  mod.rs
src-tauri/src/tunnel/: commands.rs  manager.rs  mod.rs
src-tauri/src/updater/: commands.rs  mod.rs
