[package]
name = "academ-ia-node"
version = "1.0.0"
description = "Academ-IA Node — Local AI Worker for enterprise deployment"
authors = ["Academ-IA Team"]
license = "Proprietary"
repository = "https://github.com/renaud-bxl/academ-ia-worker"
edition = "2021"
rust-version = "1.77"

[lib]
name = "academ_ia_node_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "academ-ia-node"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
